# mocto-cli

./: .gitignore  CMakeLists.txt
include/: FunctionCmd.hpp  PluginCmd.hpp  PluginRegistratorCmd.hpp  RootCmd.hpp  SubCmd.hpp
src/: SubCmd.cpp  main.cpp
